--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "explore-events",
   "version": "1.0.0",
   "engines": {
-  "node": "14.17.6",
-  "npm":"8.7.0"
+  "node": "14.17.6"  
   },
   "description": "my-events-app",
   "main": "server.js",
